...
    <string name="pause_text">Unbelegter Zeitraum</string>
    <string name="slotcode">Slot-Code</string>
    <string name="identifier">Identifizierer</string>
    <string name="duration">Dauer</string>
    <string name="appointment_time">Terminzeitpunkt</string>
    <string name="title_add_slot">Slot hinzufügen</string>
    <string name="confirm">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="fixed_slot">Fixer Slot</string>
    <string name="undo">Rückgängig</string>
    <string name="enter_slotcode_text">Bitte gib deinen Slot-Code ein</string>
    <string name="slot_details">Slot Details</string>
    <string name="standard_slot_duration">Standardslotdauer</string>
    <string name="notificationtime">Benachrichtungszeit</string>
    <string name="delay_notificationtime">Verspätungs Benachrichtigungszeit</string>
    <string name="prioritizationtime">Priorisierungszeitpunkt</string>
    <string name="mode_1">Modus 1</string>
    <string name="mode_2">Modus 2</string>
...
