...
                android:textColor="#fff"
                android:textSize="40dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tvRemainingTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/it_s_your_turn_in"
            android:textAlignment="center"
            android:textColor="@color/outwait_color_dark"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/rl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
