...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".managmentLogin.passwordForgottenScreen.PasswordForgotFragment">


    <android.widget.Button
        android:id="@+id/btnPasswordForgot"
        style="@style/DefaultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="200dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="@{()->viewModel.resetPassword()}"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etInstituteNamePasswordForgotten"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/etInstituteNamePasswordForgotten"
        app:layout_constraintTop_toBottomOf="@+id/etInstituteNamePasswordForgotten" />

    <TextView
        android:id="@+id/tvPasswordForgot"
...
