...
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/btnLoginFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
            app:panelBackgroundColor="@color/code_edit_text_background"
            app:primaryColor="@color/code_edit_text_bottom_line"
            app:secondaryColor="@color/outwait_color_dark">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/etInstituteName"
...
            android:layout_marginBottom="24dp"
            android:onClick="@{()->viewModel.login()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/boxes_institute_password"
            app:layout_constraintStart_toStartOf="@+id/boxes_institute_password"
            app:layout_constraintTop_toBottomOf="@+id/tvPForgotton"
            app:layout_constraintVertical_bias="0.224" />

        <ImageView
            android:id="@+id/ivScan"
            android:layout_width="40dp"
            android:layout_height="40dp"
...
